--- a/css/main.css
+++ b/css/main.css
@@ -329,6 +329,126 @@ ul {
     width: 1300px;
   }
 }
+.testimonials__slideshow {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+.testimonials__slideshow + div {
+  text-align: center;
+}
+.testimonials__slide {
+  display: none;
+  gap: 120px;
+  align-items: center;
+  flex-direction: column;
+}
+.testimonials__wrapper {
+  position: relative;
+}
+.testimonials__wrapper img {
+  width: 100%;
+}
+.testimonials__wrapper + div {
+  position: relative;
+}
+.testimonials__wrapper + div p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 0.015em;
+  color: rgba(255, 255, 255, 0.78);
+}
+.testimonials__rounded {
+  position: absolute;
+  left: 0;
+  top: 17%;
+  z-index: -100;
+}
+.testimonials__info {
+  position: absolute;
+  right: -2rem;
+  bottom: 2rem;
+  background: rgba(40, 48, 54, 0.2);
+  backdrop-filter: blur(25px);
+  border-radius: 8px;
+  padding: 20px 30px 0px;
+}
+.testimonials__info h4 {
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.015em;
+  color: rgba(255, 253, 253, 0.78);
+  margin: 0;
+}
+.testimonials__info p {
+  font-weight: 400;
+  font-size: 10px;
+  color: rgba(255, 253, 253, 0.55);
+}
+.testimonials__quote {
+  position: absolute;
+  font-family: "Lora";
+  left: -2rem;
+  top: 2rem;
+  transform: scale(19) rotate(20deg);
+  z-index: -20;
+  background: -webkit-linear-gradient(188.88deg, rgba(252, 252, 252, 0) 20.34%, rgba(255, 255, 255, 0.5) 155.72%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.testimonials__dot {
+  cursor: pointer;
+  height: 6px;
+  width: 44px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 5px;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.testimonials__dot:hover, .testimonials__dot.active {
+  background-color: #FF6E30;
+}
+.testimonials__prev, .testimonials__next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -90px;
+  color: white;
+  font-weight: bold;
+  font-size: 28px;
+  transition: 0.6s ease;
+  user-select: none;
+}
+.testimonials__prev:hover, .testimonials__next:hover {
+  color: #FF6E30;
+}
+.testimonials__prev:active, .testimonials__next:active {
+  transform: scale(0.8);
+}
+.testimonials__prev {
+  left: 0;
+}
+.testimonials__next {
+  right: 0;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .collection__grid {
   display: grid;
   grid-template-columns: 1fr;
@@ -491,6 +611,27 @@ ul {
   }
   .tools {
     display: flex;
+  }
+  .testimonials__slide {
+    flex-direction: row;
+  }
+  .testimonials__wrapper img {
+    width: 392px;
+  }
+  .testimonials__info h4 {
+    font-size: 26px;
+  }
+  .testimonials__info p {
+    font-size: 16px;
+  }
+  .testimonials__prev, .testimonials__next {
+    margin-top: -22px;
+  }
+  .testimonials__prev {
+    left: -3rem;
+  }
+  .testimonials__next {
+    right: -3rem;
   }
   .footer__wrapper {
     display: grid;
