--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -83,7 +83,7 @@
             padding: 10px 30px;
 
             &:hover {
-                background: #FF6E30;
+                background: vars.$main-color;
             }
 
             &:nth-child(1) {
