--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -34,8 +34,8 @@ ul {
 }
 
 .red {
-    color: red !important;
-    text-shadow: 0 0 5px red;
+    color: vars.$red !important;
+    text-shadow: 0 0 5px vars.$red;
 }
 
 .hidden {
@@ -61,11 +61,11 @@ ul {
     outline: none;
     cursor: pointer;
     display: inline-block;
-    background: #FF6E30;
+    background: vars.$main-color;
     border-radius: 8px;
     font-weight: 600;
     font-size: 14px;
-    color: #FDF5FF;
+    color: vars.$light;
     padding: 12px 28px;
 
     &:hover {
